--- a/06_mood.Rmd
+++ b/06_mood.Rmd
@@ -122,40 +122,13 @@ In r, such a factor analysis can be executed as follows:
 library(dplyr)
 library(tibble)
 
-items <- csd %>%
-  select(c(
-    "mood_enthus", "mood_cheerf",
-    "mood_strong", "mood_satisfi",
-    "mood_lonely", "mood_anxious",
-    "mood_guilty")) %>%
-  scale(.) %>%
-  as.tibble(.) %>%
-  mutate_all(funs(residuals(stats::arima(., order = c(1,0,0)))))
-
-correlations <- cor(items, use = "complete.obs")
-fa = psych::fa(items,
-               nfactors = 2,
-               rotate = "oblimin",
-               fm = "pa",
-               scores = "regression")
-
-psych::fa.diagram(fa, 
-                  simple = TRUE, 
-                  main = "")
-```
-
-```{r fig06f, fig.cap = "Factor analysis of 7 EMA items, revealing two factors:  Positive Affect (PA) and Negative Affect (NA)."}
-# Code snippet 6.3: Performing a factor analysis.
-library(dplyr)
-library(tibble)
-
 items2 <- csd %>%
   select(c(
    "mood_relaxed", "mood_satisfi",
    "mood_enthus", "mood_cheerf",
    "mood_strong", "mood_down",
-  "mood_lonely", "mood_anxious", 
-  "mood_guilty" )) %>%
+   "mood_lonely", "mood_anxious", 
+   "mood_guilty" )) %>%
   scale(.) %>%
   as.tibble(.) %>%
   mutate_all(funs(residuals(stats::arima(., order = c(1,0,0)))))
@@ -169,10 +142,7 @@ model <- fa(items2,
                fm = "pa",
                scores = "regression")
 
-psych::fa.diagram(model, 
-                  simple = TRUE,
-                  main = "")
 colnames(model$loadings) <- c("PA", "NA")
-fa.diagram(model)
+psych::fa.diagram(model)
 
 ```
