add jos twisk as a reference

--- a/book.bib
+++ b/book.bib
@@ -1341,6 +1341,24 @@ year = {1999}
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
 
+
+@book{twisk2006,
+  title={Applied multilevel analysis: a practical guide},
+  year = {2006},
+  author = {Twisk, JWR},
+  publisher = {Cambridge University Press},
+  isbn = {9780521614986}
+}
+
+@book{twisk2013,
+  title = {Applied longitudinal data analysis for epidemiology: a practical guide (2nd Revised edition)},
+  author = {Twisk, Jos WR},
+  year = {2013},
+  publisher = {Cambridge University Press}
+  isbn = {9781107699922}
+}
+
+
 @Article{VanBallegooijen2016,
   author    = {van Ballegooijen, Wouter and Ruwaard, Jeroen and Karyotaki, Eirini and Ebert, David D. and Smit, Johannes H. and Riper, Heleen},
   title     = {{Reactivity to smartphone-based ecological momentary assessment of depressive symptoms (MoodMonitor): Protocol of a randomised controlled trial}},
@@ -1419,6 +1437,9 @@ year = {1999}
   year={2015},
   publisher={Frontiers}
 }
+
+
+
 
 @article{VanHeest2014,
   title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
