--- a/09_lmm.Rmd
+++ b/09_lmm.Rmd
@@ -5,10 +5,10 @@
 options(digits = 3)
 ```
 
-EMA data are timeseries that are characterised by complex correlational structures, irregular sampling intervals, missing data, and substantive individual differences. Mixed models are well-suited to deal with these data. This chapter provides a brief introduction to conducting mixed models analysis of EMA data in R.
+EMA data are time-series that are characterized by complex correlational structures, irregular sampling intervals, missing data, and substantive individual differences. Mixed models are well-suited to deal with these data. This chapter provides a brief introduction to conducting mixed models analysis of EMA data in R.
 
 ## The Mixed Model
-Mixed modeling can be understood as a regression technique in which in separate regression functions are estimated for each cluster in the data set. In EMA data, these clusters are defined by the participants. Data from the same participant are expected to be correlated, and one way to honour this correlation is to conceptualise a separate regression for each participant. This idea, in the most simple regression model, can be expressed as: 
+Mixed modeling can be understood as a regression technique in which in separate regression functions are estimated for each cluster in the data set. In EMA data, these clusters are defined by the participants. Data from the same participant are expected to be correlated, and one way to honor this correlation is to conceptualize a separate regression for each participant. This idea, in the most simple regression model, can be expressed as: 
 
 \begin{equation} 
   Y_{ij} = intercept_{i} + \epsilon_{ij} 
@@ -182,7 +182,7 @@ fm <- lme(Y ~ 1 + time * group, random = ~ 1 + time | id,
 round(summary(fm)$tTable, 2)
 ```
 
-In Figure \@ref(fig:fig9e) below, EMA mood ratings predicted by the fitted model clearly show how the model detects 1) the fixed between-group effect, and 2) the variance in intercepts and slopes in both groups. 
+In Figure \@ref(fig:fig9e) below, EMA mood ratings predicted by the fitted model show how the model detects 1) the fixed between-group effect, and 2) the variance in intercepts and slopes in both groups. 
 
 ```{r fig9e, echo = FALSE, out.width = "100%", fig.asp = .5, fig.cap = "Predicted mood ratings"}
 d3$predY <- predict(fm)
@@ -197,6 +197,6 @@ ggplot(d3, aes(x = time, y = predY, group = id)) +
 
 In this chapter, we introduced mixed model analysis of EMA data. To do so, we could only touch upon the theoretical foundations of mixed models, and we deliberately used simple examples with clean simulated data. Readers, who consider the application of mixed models, are strongly advised to study additional resources.
 
-The authoritative reference for mixed effect modeling in R is a book by Pinheiro and Bates [-@Pinheiro2000]. To fully appreciate this book, however, a strong background in mathemathical statistics is required. Gentle introductions in the topic can be found in XXX, YYY and ZZZ ().   
+The authoritative reference for mixed effect modeling in R is a book by Pinheiro and Bates [-@Pinheiro2000]. To fully appreciate this book, however, a strong background in mathemathical statistics is required. Thorough introductions in the topic are further found in the work of Prof. dr. Jos Twisk [@twisk2006; @twisk2013], who also teaches an applied mixed models course at the Department of Epidemiology and Biostatistics at the Vrije Universiteit Medical Center (see: http://epidm.nl/en/courses/mixed-models/). 
 
 
