fix syntax error (twisk)

--- a/book.bib
+++ b/book.bib
@@ -1354,7 +1354,7 @@ year = {1999}
   title = {Applied longitudinal data analysis for epidemiology: a practical guide (2nd Revised edition)},
   author = {Twisk, Jos WR},
   year = {2013},
-  publisher = {Cambridge University Press}
+  publisher = {Cambridge University Press},
   isbn = {9781107699922}
 }
 
