refs for chapter 8

--- a/book.bib
+++ b/book.bib
@@ -157,6 +157,18 @@
   year = {2016}
 }
 
+@article{bowen2006,
+  title={Mood variability in anxiety disorders},
+  author={Bowen, Rudy and Baetz, Marilyn and Hawkes, Judy and Bowen, Angela},
+  journal={Journal of Affective Disorders},
+  volume={91},
+  number={2-3},
+  pages={165--170},
+  year={2006},
+  publisher={Elsevier}
+}
+
+
 @article{burton2013,
   title={Activity monitoring in patients with depression: A systematic review},
   author={Burton, Christopher and McKinstry, Brian and T{\u{a}}tar, Aurora Szentagotai and Serrano-Blanco, Antoni and Pagliari, Claudia and Wolters, Maria},
@@ -1646,6 +1658,15 @@ year = {1999}
   year={2016},
   publisher={" O'Reilly Media, Inc."}
 }
+
+
+@misc{wiki_Stationary_process,
+   author = "Wikipedia",
+   title = "{Stationary process} --- {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   howpublished = {\url{http://en.wikipedia.org/w/index.php?title=Stationary\%20process&oldid=866157327}},
+   note = "[Online; accessed 30-October-2018]"
+ }
 
 @book{wilkinson2006,
   title={The grammar of graphics},
